bcs-k8s/bcs-general-pod-autoscaler/manifeasts/gpa.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gpa
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gpa-service
  template:
    metadata:
      labels:
        app: gpa-service
    spec:
      serviceAccountName: gpa
      containers:
        - args:
            - --tlscert=/root/cert.pem
            - --tlskey=/root/key.pem
            - --v=6
            - --port=443
# you need to fill in the image url yourself
          image: docker.io/xxx
          imagePullPolicy: Always
          name: gpa
          ports:
            - containerPort: 8080
          volumeMounts:
            - mountPath: /root
              name: gpasecret
      volumes:
        - name: gpasecret
          secret:
            secretName: gpa-secret
            items:
              - key: key.pem
                path: key.pem
              - key: cert.pem
                path: cert.pem

---
apiVersion: v1
kind: Service
metadata:
  name: gpa-validator
  namespace: kube-system
spec:
  selector:
    app: gpa-service
  ports:
    - port: 443
      targetPort: 443
