bcs-k8s/bcs-general-pod-autoscaler/manifeasts/validatorconfig.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: gpa-validator
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURBekNDQWV1Z0F3SUJBZ0lKQU15M2dxY05QNmo4TUEwR0NTcUdTSWIzRFFFQkN3VUFNQmN4RlRBVEJnTlYKQkFNTURIWmhiR2xrWVhSdmNsOWpZVEFnRncweU1UQTFNVFV4TXpNNE5EWmFHQTh5TWprMU1ESXlPREV6TXpnMApObG93RnpFVk1CTUdBMVVFQXd3TWRtRnNhV1JoZEc5eVgyTmhNSUlCSWpBTkJna3Foa2lHOXcwQkFRRUZBQU9DCkFROEFNSUlCQ2dLQ0FRRUFxdm91RGppWFFKc3V6VUk4VlBHQUlYQXl0YXhMeGlLQVpzQVE2SUx1dlRwTUNnaTAKWTQwdktGcGdBU29zTTBYQUg4VWlHeWRXYldQd21uMi9qc2tKMjk5VGhPdnN4VzBHYU1BNHpqd3NHNUU3ZUZyUQp0RGlWZVd5S1k0 [...]
      service:
        namespace: kube-system
        name: gpa-validator
        path: /mutate
    failurePolicy: Ignore
    name: gpa-validator.autoscaling.bkbcs.tencent.com
    namespaceSelector:
      matchExpressions:
        - key: ns
          operator: NotIn
          values:
            - kube-system
    rules:
      - apiGroups:
          - "autoscaling.bkbcs.tencent.com"
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - '*'
        scope: '*'
    sideEffects: None
    timeoutSeconds: 10
